--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documentación | Mineria de Datos</title>
+    <!-- Tailwind css -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-100">
+    <nav class="bg-white shadow-md">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between items-center h-16">
+                <!-- Titulo logo -->
+                 <a href="/" class="text-xl font-bold text-gray-800">MiningData</a>
+                <!-- Nav -->
+                <div class="hidden md:flex space-x-6">
+                    <a href="#">Inicio</a>
+                    <a href="#">Documentación</a>
+                    <a href="#">Comparativa</a>
+                    <a href="#">Videos</a>
+                </div>
+            </div>
+        </div>
+    </nav>
     
 </body>
 </html>
