--- a/index.html
+++ b/index.html
@@ -12,17 +12,40 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <!-- Titulo logo -->
-                 <a href="/" class="text-xl font-bold text-gray-800">MiningData</a>
+                 <a href="/" class="text-xl font-bold text-sky-700">MiningData</a>
                 <!-- Nav -->
                 <div class="hidden md:flex space-x-6">
-                    <a href="#">Inicio</a>
-                    <a href="#">Documentación</a>
-                    <a href="#">Comparativa</a>
-                    <a href="#">Videos</a>
+                    <a href="/" class="text-gray-700 hover:text-blue-600">Inicio</a>
+                    <a href="#" class="text-gray-700 hover:text-blue-600">Documentación</a>
+                    <a href="#" class="text-gray-700 hover:text-blue-600">Comparativa</a>
+                    <a href="#" class="text-gray-700 hover:text-blue-600">Videos</a>
+                </div>
+                <!-- Boton Menu celular-->
+                <div class="md:hidden">
+                    <button id="menu-button" class="text-gray-800 focus:outline-none">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16m-7 6h7"></path>
+                        </svg>
+                    </button>
                 </div>
             </div>
+        </div><!--.container-->
+        <!-- Menu desplegable -->
+        <div id="mobile-menu" class="md:hidden hidden">
+            <a href="/" class="block px-4 py-2 text-gray-700 hover:bg-gray-200">Inicio</a>
+            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-200">Documentación</a>
+            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-200">Comparativa</a>
+            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-200">Videos</a>
+
         </div>
     </nav>
-    
+    <!-- Seccion Informacion -->
+    <div class="container mx-auto px-4 py-8">
+        <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center md:mb-0">Bienvenido a la plataforma Educativa MiningData.</h1>
+        <p class="text-gray-500 text-center mt-1">Aprenderas conceptos claves, herramientas y obtendras acceso a recursos como apoyo </p>
+    </div>
+    <!-- Script -->
+    <script src="js/app.js"></script>
 </body>
 </html>
