--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <!-- Título logo -->
-                <a href="/" class="text-xl font-bold text-slate-600 dark:text-slate-200">DataMining</a>
+                <a href="/" class="text-2xl font-bold font-mono text-slate-600 dark:text-slate-200">DataMining</a>
                 <!-- Navegación -->
                 <div class="hidden md:flex space-x-7 items-center">
                     <a href="/" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Inicio</a>
@@ -54,13 +54,14 @@
             <a href="#"
                 class="block px-4 py-2 text-gray-700 hover:bg-gray-200 dark:text-gray-300 dark:hover:bg-gray-700">Videos</a>
         </div>
-    </nav>
+    </nav> <!--HASTA AQUI -->
     <!-- Sección Información -->
     <div class="container mx-auto px-4 py-8">
         <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6 text-center md:mb-0">Bienvenido a la
             plataforma Educativa DataMining.</h1>
         <p class="text-gray-500 dark:text-gray-400 text-center mt-1">Aprenderás conceptos claves, herramientas y
             obtendrás acceso a recursos como apoyo.</p>
+        <img src="/img/imgMineria.png" alt="Imagen Mineria datos" class="scale-110">
     </div>
     <!-- Script para alternar modo oscuro -->
     <script src="js/app.js"></script>
