--- a/Pages/videos.html
+++ b/Pages/videos.html
@@ -22,10 +22,14 @@
                 <a href="/" class="text-2xl font-bold font-mono text-slate-600 dark:text-slate-200">DataMining</a>
                 <!-- Navegación -->
                 <div class="hidden md:flex space-x-7 items-center">
-                    <a href="/" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Inicio</a>
-                    <a href="/Pages/documentacion.html" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Documentación</a>
-                    <a href="/Pages/comparativa.html" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Comparativa</a>
-                    <a href="/Pages/videos.html" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Videos</a>
+                    <a href="/"
+                        class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Inicio</a>
+                    <a href="/Pages/documentacion.html"
+                        class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Documentación</a>
+                    <a href="/Pages/comparativa.html"
+                        class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Comparativa</a>
+                    <a href="/Pages/videos.html"
+                        class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Videos</a>
                     <!-- Botón para alternar modo oscuro -->
                     <button id="dark-mode-toggle"
                         class="ml-4 w-10 h-10 flex items-center justify-center rounded-full bg-gray-200 dark:bg-gray-700 shadow-lg hover:scale-110 transition-all duration-300 focus:outline-none ">
@@ -57,14 +61,10 @@
     </nav> <!--HASTA AQUI -->
     <!-- Sección Información -->
     <div class="container mx-auto px-4 py-8">
-        <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6 text-center md:mb-0">Bienvenido a la
-            plataforma Educativa DataMining.</h1>
-        <p class="text-gray-500 dark:text-gray-400 text-center mt-1">Aprenderás conceptos claves, herramientas y
-            obtendrás acceso a recursos como apoyo.</p>
-        <img src="/img/imgMineria.png" alt="Imagen Mineria datos" class="scale-110">
+        <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6 text-center md:mb-0">Videos</h1>
     </div>
     <!-- Script para alternar modo oscuro -->
-    <script src="js/app.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 
 </html>
