--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +18,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <!-- Título logo -->
-                <a href="/" class="text-2xl font-bold font-mono text-slate-600 dark:text-slate-200">DataMining</a>
+                <a href="/" class="text-3xl font-bold font-mono bg-clip-text text-transparent bg-gradient-to-r from-cyan-500 to-blue-700">DataMining</a>
                 <!-- Navegación -->
                 <div class="hidden md:flex space-x-7 items-center">
                     <a href="/" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Inicio</a>
@@ -61,7 +60,6 @@
             plataforma Educativa DataMining.</h1>
         <p class="text-gray-500 dark:text-gray-400 text-center mt-1">Aprenderás conceptos claves, herramientas y
             obtendrás acceso a recursos como apoyo.</p>
-        <img src="/img/imgMineria.png" alt="Imagen Mineria datos" class="scale-110">
     </div>
     <!-- Script para alternar modo oscuro -->
     <script src="js/app.js"></script>
