--- a/Pages/videos.html
+++ b/Pages/videos.html
@@ -19,7 +19,8 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <!-- Título logo -->
-                <a href="/" class="text-2xl font-bold font-mono text-slate-600 dark:text-slate-200">DataMining</a>
+                <a href="/"
+                    class="text-3xl font-bold font-mono bg-clip-text text-transparent bg-gradient-to-r from-cyan-500 to-blue-700">DataMining</a>
                 <!-- Navegación -->
                 <div class="hidden md:flex space-x-7 items-center">
                     <a href="/"
