--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -62,7 +62,9 @@
     </nav> <!--HASTA AQUI -->
     <!-- Sección Información -->
     <div class="container mx-auto px-4 py-8">
-        <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6 text-center md:mb-0">Document</h1>
+        <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6 text-center md:mb-0">Documentación</h1>
+        <h2 class="text-2xl font-bold mt-5">¿Qué es la Mineria de Datos?</h2>  
+
     </div>
     <!-- Script para alternar modo oscuro -->
     <script src="../js/app.js"></script>
