primer commit bro

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <!-- Navegación -->
                 <div class="hidden md:flex space-x-7 items-center">
                     <a href="/" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Inicio</a>
-                    <a href="/Pages/documentacion.html" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Documentación</a>
-                    <a href="/Pages/comparativa.html" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Comparativa</a>
-                    <a href="/Pages/videos.html" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Videos</a>
+                    <a href="../Pages/documentacion.html" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Documentación</a>
+                    <a href="../Pages/comparativa.html" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Comparativa</a>
+                    <a href="../Pages/videos.html" class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Videos</a>
                     <!-- Botón para alternar modo oscuro -->
                     <button id="dark-mode-toggle"
                         class="ml-4 w-10 h-10 flex items-center justify-center rounded-full bg-gray-200 dark:bg-gray-700 shadow-lg hover:scale-110 transition-all duration-300 focus:outline-none ">
