se termino seccion conceptos

--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -120,7 +120,7 @@
       </h2>
       <!--que es mineria -->
       <div class="mt-5 flex justify-center">
-        <p class="text-lg leading-relaxed text-gray-700 dark:text-gray-300">
+        <p class="text-lg leading-relaxed text-gray-700 dark:text-gray-300 text-justify">
           La minería de datos es una técnica muy poderosa que se utiliza para
           <span class="text-blue-400 font-bold"
             >extraer información valiosa y oculta</span
@@ -213,8 +213,9 @@
           </p>
         </div>
       </div>
+      <!--conceptos basicos -->
       <h2
-        class="text-2xl font-bold mt-5 text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400"
+        class="text-2xl mb-4 leading-relaxed font-bold mt-5 text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400"
       >
         Conceptos Básicos
       </h2>
@@ -225,15 +226,46 @@
         <br />
       </p>
       <ol class="list-disc list-inside text-lg text-gray-700 dark:text-gray-300">
-        <li>
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Datos:</span>
-          <span class="ml-2">Hechos que describen características de objetos, eventos o personas. Es la materia prima de la cual se obtendra la información.</span>
+        <li class="mb-1">
+          <span class="text-slate-700 dark:text-gray-400 font-bold">Dataset:</span>
+          <span class="ml-1">También llamado conjunto de datos o base de datos. Es una colección de datos u observaciones relacionadas a un problema determinado </span>
         </li>
-        <li>
+        <li class="mb-1">
+          <span class="text-slate-700 dark:text-gray-400 font-bold">Datos:</span>
+          <span class="ml-1">Hechos que describen características de objetos, eventos o personas. Es la materia prima de la cual se obtendra la información.</span>
+        </li>
+        <li class="mb-1">
           <span class="text-slate-700 dark:text-gray-400 font-bold">Información:</span>
-          <span class="ml-2">Datos procesados y presentados en forma adecuada, de interés para un observador en un tiempo determinado.</span>
+          <span class="ml-1">Datos procesados y presentados en forma adecuada, de interés para un observador en un tiempo determinado.</span>
+        </li>
+       <li class="mb-1">
+          <span class="text-slate-700 dark:text-gray-400 font-bold">Conocimiento:</span>
+          <span class="ml-1">Información procesada para emitir juicios que llevan a conclusiones.</span>
+        </li>
+        <li class="mb-1">
+          <span class="text-slate-700 dark:text-gray-400 font-bold">Rendimiento:</span>
+          <span class="ml-1">Tambien llamado performance o desempeño. Es un valor numérico que mide la capacidad de un modelo o algoritmo de mineria de datos para reconocer patrones (clases, predicciones, grupos, etc.) en los datos.</span>
+        </li>
+        <li class="mb-1">
+          <span class="text-slate-700 dark:text-gray-400 font-bold">Parámetros:</span>
+          <span class="ml-1">Valores que influyen en el comportamiento y desempeño de un modelo de minería de datos.</span>
+        </li>
+        <li class="mb-1">
+          <span class="text-slate-700 dark:text-gray-400 font-bold">Sesgo:</span>
+          <span class="ml-1">Es una distorción que se produce en cualquier parte del proceso KDD debido a la forma en que se toman decisiones en el proceso.</span>
+        </li>
+        <li class="mb-1">
+          <span class="text-slate-700 dark:text-gray-400 font-bold">Características:</span>
+          <span class="ml-1">También llamado feature, variable o atributo. Representan las propiedades de un objeto en un dataset. Pueden ser observables y no observables</span>
+        </li>
+        <li class="mb-1">
+          <span class="text-slate-700 dark:text-gray-400 font-bold">Instancias:</span>
+          <span class="ml-1">También llamadas observaciones o registros. Es el conjunto de distintas características asociadas al mismo objeto.</span>
         </li>
       </ol>
+      <div class="flex justify-center items-center mb-4 mt-4">
+        <img src="../img/ejemplo.JPG" alt="Imagen de referencia al contenido" class="max-w-full h-auto">
+      </div>
     </div><!--.container principal. -->
 
     <!-- Script para alternar modo oscuro -->
