seccion proceso kdd

--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -136,6 +136,7 @@
           <br />
         </p>
       </div>
+      <!--cards seccion mineria -->
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <!-- Tarjeta 1 -->
         <div class="bg-slate-300 rounded-lg p-6 shadow-md text-center">
@@ -213,7 +214,7 @@
           </p>
         </div>
       </div>
-      <!--conceptos basicos -->
+      <!--titulo conceptos basicos -->
       <h2
         class="text-2xl mb-4 leading-relaxed font-bold mt-5 text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400"
       >
@@ -225,46 +226,96 @@
         <br />
         <br />
       </p>
-      <ol class="list-disc list-inside text-lg text-gray-700 dark:text-gray-300">
+      <!--lista de conceptos -->
+      <div class="p-4 max-w-7xl mx-auto bg-gray-100 dark:bg-gray-800 rounded-md shadow-md">
+        <ol class="list-disc pl-6 space-y-4 text-gray-700 dark:text-gray-300">
+          <li class="mb-1">
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Dataset:</span>
+            <span class="ml-1">También llamado conjunto de datos o base de datos. Es una colección de datos u observaciones relacionadas a un problema determinado </span>
+          </li>
+          <li class="mb-1">
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Datos:</span>
+            <span class="ml-1">Hechos que describen características de objetos, eventos o personas. Es la materia prima de la cual se obtendra la información.</span>
+          </li>
+          <li class="mb-1">
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Información:</span>
+            <span class="ml-1">Datos procesados y presentados en forma adecuada, de interés para un observador en un tiempo determinado.</span>
+          </li>
         <li class="mb-1">
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Dataset:</span>
-          <span class="ml-1">También llamado conjunto de datos o base de datos. Es una colección de datos u observaciones relacionadas a un problema determinado </span>
-        </li>
-        <li class="mb-1">
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Datos:</span>
-          <span class="ml-1">Hechos que describen características de objetos, eventos o personas. Es la materia prima de la cual se obtendra la información.</span>
-        </li>
-        <li class="mb-1">
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Información:</span>
-          <span class="ml-1">Datos procesados y presentados en forma adecuada, de interés para un observador en un tiempo determinado.</span>
-        </li>
-       <li class="mb-1">
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Conocimiento:</span>
-          <span class="ml-1">Información procesada para emitir juicios que llevan a conclusiones.</span>
-        </li>
-        <li class="mb-1">
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Rendimiento:</span>
-          <span class="ml-1">Tambien llamado performance o desempeño. Es un valor numérico que mide la capacidad de un modelo o algoritmo de mineria de datos para reconocer patrones (clases, predicciones, grupos, etc.) en los datos.</span>
-        </li>
-        <li class="mb-1">
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Parámetros:</span>
-          <span class="ml-1">Valores que influyen en el comportamiento y desempeño de un modelo de minería de datos.</span>
-        </li>
-        <li class="mb-1">
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Sesgo:</span>
-          <span class="ml-1">Es una distorción que se produce en cualquier parte del proceso KDD debido a la forma en que se toman decisiones en el proceso.</span>
-        </li>
-        <li class="mb-1">
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Características:</span>
-          <span class="ml-1">También llamado feature, variable o atributo. Representan las propiedades de un objeto en un dataset. Pueden ser observables y no observables</span>
-        </li>
-        <li class="mb-1">
-          <span class="text-slate-700 dark:text-gray-400 font-bold">Instancias:</span>
-          <span class="ml-1">También llamadas observaciones o registros. Es el conjunto de distintas características asociadas al mismo objeto.</span>
-        </li>
-      </ol>
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Conocimiento:</span>
+            <span class="ml-1">Información procesada para emitir juicios que llevan a conclusiones.</span>
+          </li>
+          <li class="mb-1">
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Rendimiento:</span>
+            <span class="ml-1">Tambien llamado performance o desempeño. Es un valor numérico que mide la capacidad de un modelo o algoritmo de mineria de datos para reconocer patrones (clases, predicciones, grupos, etc.) en los datos.</span>
+          </li>
+          <li class="mb-1">
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Parámetros:</span>
+            <span class="ml-1">Valores que influyen en el comportamiento y desempeño de un modelo de minería de datos.</span>
+          </li>
+          <li class="mb-1">
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Sesgo:</span>
+            <span class="ml-1">Es una distorción que se produce en cualquier parte del proceso KDD debido a la forma en que se toman decisiones en el proceso.</span>
+          </li>
+          <li class="mb-1">
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Características:</span>
+            <span class="ml-1">También llamado feature, variable o atributo. Representan las propiedades de un objeto en un dataset. Pueden ser observables y no observables</span>
+          </li>
+          <li class="mb-1">
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Instancias:</span>
+            <span class="ml-1">También llamadas observaciones o registros. Es el conjunto de distintas características asociadas al mismo objeto.</span>
+          </li>
+        </ol>
+      </div>
+      <!--imagen-->
       <div class="flex justify-center items-center mb-4 mt-4">
-        <img src="../img/ejemplo.JPG" alt="Imagen de referencia al contenido" class="max-w-full h-auto">
+        <img src="../img/ejemplo.JPG" alt="Imagen de referencia al contenido" class="rounded-md max-w-full h-auto">
+      </div>
+      <!--titulo proceso KDD  -->
+      <h2 class="text-2xl my-5 leading-relaxed font-bold text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400">
+        Proceso KDD
+      </h2>
+      <p class="text-justify text-lg leading-relaxed text-gray-700 dark:text-gray-300 mb-2">KDD o Know Discovery in Databases (Descubrimiento de Conocimiento en Bases de datos), es el 
+        <span class="font-bold text-blue-400">proceso de encontrar patrones útiles y conocimientos a partir de grandes cantidades de datos.</span></p>
+      <p class="text-justify text-lg leading-relaxed text-gray-700 dark:text-gray-300">
+        La importancia del proceso KDD radica en su <span class="font-bold text-blue-400">capacidad para transformar grandes volúmenes de datos en conocimiento valioso y accionable.</span> En un mundo impulsado por datos, 
+        KDD permite a las organizaciones descubrir patrones ocultos, tendencias y relaciones significativas que pueden informar decisiones estratégicas, optimizar procesos, mejorar la eficiencia operativa
+        y generar ventajas competitivas. Al convertir datos en información útil KDD ayuda a las empresas a innovar, preever problemas o oportunidades y responder de manera más efectiva a las necesidades del mercado y de sus clientes.
+      </p>
+      <!--Titulo Etapas del proceso KDD -->
+      <h2 class="text-2xl my-5 leading-relaxed font-bold text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400" ">
+        Etapas del Proceso KDD
+      </h2>
+      <p class="text-lg text-gray-700 dark:text-gray-300">
+        En lo que respecta a las fases del proceso KDD, consta de las siguientes:
+      </p>
+      <!--listado de proceso kdd -->
+      <div class="p-4 max-w-7xl mx-auto bg-gray-100 dark:bg-gray-800 my-5 rounded-md shadow-md">
+        <ol class="list-decimal pl-6 space-y-4 text-gray-700 dark:text-gray-300">
+          <li>
+        <span class="font-bold text-slate-700 dark:text-gray-400">Selección:</span> 
+        Se seleccionan los datos relevantes para el análisis a partir de una o varias fuentes de datos.
+          </li>
+          <li>
+        <span class="font-bold text-slate-700 dark:text-gray-400">Preprocesamiento:</span> 
+        Preparación y limpieza de los datos extraídos desde las distintas fuentes de datos en una forma manejable, necesaria para las fases posteriores.
+          </li>
+          <li>
+        <span class="font-bold text-slate-700 dark:text-gray-400">Transformación:</span> 
+        Se transforman los datos en una forma adecuada para su posterior análisis.
+          </li>
+          <li>
+        <span class="font-bold text-slate-700 dark:text-gray-400">Minería de datos:</span> 
+        Tratamos de aplicar métodos eficaces con el objetivo de extraer patrones previamente desconocidos o nuevos, para averiguar contenidos ocultos en los datos.
+          </li>
+          <li>
+        <span class="font-bold text-slate-700 dark:text-gray-400">Evaluación e implantación:</span> 
+        En esta última fase, se evalúan los resultados obtenidos y se implantan las soluciones encontradas.
+          </li>
+        </ol>
+      </div>
+      <div class="flex justify-center items-center my-5">
+        <img src="../img/proceso-kdd.PNG" alt="Imagen de proceso KDD" class="rounded-md max-w-full h-auto">
       </div>
     </div><!--.container principal. -->
 
